# dsview-cli

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md
.github/actions/package-and-validate/: action.yml
.github/actions/setup-msvc-dev-cmd/: action.yml
.github/actions/setup-native-prereqs/: action.yml
.github/workflows/: ci.yml  release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/: unstable-device-handle-open.md  vcd-export-nan-inf-timestamps.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/milestones/v1.0-phases/01-native-integration-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/milestones/v1.0-phases/02-device-discovery-and-session-bring-up/: 02-01-PLAN.md  02-02-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-capture-configuration-surface/: 03-01-SUMMARY.md  03-03-SUMMARY.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md
.planning/milestones/v1.0-phases/05-export-artifacts/: 05-UAT.md  (+4 more)
.planning/phases/01-readme-ci-release-workflows/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-device-discovery-and-session-bring-up/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-PLAN.md  02-VALIDATION.md
.planning/phases/03-capture-configuration-surface/: 03-01-PLAN.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-VERIFICATION.md
.planning/phases/04-acquisition-execution/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  VERIFICATION.md
.planning/phases/05-export-artifacts/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-cli-productization/: 06-01-PLAN.md  06-01-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-UAT.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-verification-backfill-for-bring-up-and-configuration/: 07-01-PLAN.md  07-02-SUMMARY.md  VERIFICATION.md
.planning/phases/08-verification-backfill-for-acquisition-and-export/: 08-01-SUMMARY.md  08-02-SUMMARY.md  VERIFICATION.md
.planning/phases/09-audit-closeout-reconciliation/: 09-01-PLAN.md  09-01-SUMMARY.md  09-RESEARCH.md
.planning/phases/10-device-option-bridge-and-discovery/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-HUMAN-UAT.md  10-RESEARCH.md  10-REVIEW.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/phases/11-device-option-validation-model/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-RESEARCH.md  11-REVIEW.md  11-VALIDATION.md  11-VERIFICATION.md
.planning/phases/12-cli-device-option-surface/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-REVIEW.md  12-VALIDATION.md  12-VERIFICATION.md
.planning/phases/13-option-aware-capture-reporting/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-03-SUMMARY.md  13-CONTEXT.md  13-HUMAN-UAT.md  13-RESEARCH.md  13-REVIEW.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-decode-runtime-boundary-and-decoder-registry/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-03-PLAN.md  14-03-SUMMARY.md  14-CONTEXT.md  14-HUMAN-UAT.md  14-RESEARCH.md  14-VERIFICATION.md
.planning/phases/15-decode-config-model-and-validation/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-03-PLAN.md  15-03-SUMMARY.md  15-CONTEXT.md  15-RESEARCH.md  15-VALIDATION.md  15-VERIFICATION.md
.planning/phases/16-offline-decode-execution/: 16-01-PLAN.md  16-01-SUMMARY.md  16-02-PLAN.md  16-02-SUMMARY.md  16-03-PLAN.md  16-03-SUMMARY.md  16-CONTEXT.md  16-RESEARCH.md  16-VALIDATION.md  16-VERIFICATION.md
.planning/phases/17-decode-output-and-workflow-reporting/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-03-PLAN.md  17-03-SUMMARY.md  17-CONTEXT.md  17-RESEARCH.md  17-VALIDATION.md  17-VERIFICATION.md
.planning/quick/260409-deq-finalize-phase-9-closeout-bookkeeping-sy/: 260409-deq-PLAN.md  260409-deq-SUMMARY.md
.planning/quick/260409-g4g-review-the-current-milestone-closeout-pl/: 260409-g4g-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/dsview-cli/: Cargo.toml  build.rs
crates/dsview-cli/src/: capture_device_options.rs  device_options.rs  lib.rs  main.rs
crates/dsview-cli/tests/: capture_cli.rs  decode_cli.rs  device_options_cli.rs  devices_cli.rs  help_cli.rs
crates/dsview-core/: Cargo.toml
crates/dsview-core/src/: capture_config.rs  device_option_validation.rs  device_options.rs  lib.rs
crates/dsview-core/tests/: acquisition.rs  bundle_discovery.rs  decode_config.rs  decode_execute.rs  device_option_validation.rs  device_options.rs  export_artifacts.rs
crates/dsview-sys/: Cargo.toml  bridge_runtime.c  build.rs  smoke_version_shim.c  wrapper.h
crates/dsview-sys/compat/: msvc_decode_preinclude.h  msvc_preinclude.h  pthread.h  unistd.h
crates/dsview-sys/native/: CMakeLists.txt
crates/dsview-sys/native/windows/: dsview_decode_runtime.def  dsview_runtime.def  input_minimal.c  output_minimal.c  session_stubs.c
crates/dsview-sys/src/: lib.rs
crates/dsview-sys/tests/: boundary.rs  device_options.rs  runtime_packaging.rs
patches/: README.md
patches/dsview/: 0001-sdcard-spi-write-block-syntax-fix.patch
scripts/: apply-dsview-patches.ps1  apply-dsview-patches.sh  install.ps1  install.sh
tools/: package-bundle.py  package-bundle.rs  validate-bundle.py  validate-bundle.rs
(+18 files in other folders)
