[package]
name = "dsview-cli"
version = "1.2.2"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dsview-core = { path = "../dsview-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
dsview-sys = { path = "../dsview-sys" }
